input/2/devtest/src/objects/ABB_Project__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact Person for project</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ABB Projects</relationshipLabel>
        <relationshipName>ABB_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Amount__c</fullName>
        <inlineHelpText>Agregated value of the project</inlineHelpText>
        <label>Project Amount</label>
        <summarizedField>ABB_Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>ABB_Expense__c.ABB_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <formula>Title__c  &amp; &quot; &quot; &amp; TEXT(Project_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Title of the project</inlineHelpText>
        <label>Title</label>
        <length>160</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ABB Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>ABB Project Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABB Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>